--- a/school/teacher/templates/teacher/add_student.html
+++ b/school/teacher/templates/teacher/add_student.html
@@ -32,59 +32,52 @@
      <h1 class="well"><b> ADD studentS</b> </h1>
      <div class="col-lg-12 well">
      <div class="row">
-                 <form>
+                 <form method="POST"  enctype="multipart/form-data">
+                    {% csrf_token %}
                      <div class="col-sm-12">
                          <div class="row">
-                             <div class="col-sm-6 form-group">
-                                 <label>student id</label>
-                                 <input type="text" placeholder="Enter student id" class="form-control" id="sid">
-                             </div>
+                             
                              <div class="col-sm-6 form-group">
                                  <label>student  Name</label>
-                                 <input type="text" placeholder="Enterstudent Name Here.." class="form-control" id="sname">
+                                 <input type="text" placeholder="Enterstudent Name Here.." class="form-control" name="sname">
                              </div>
                          </div>					
                          <div class="form-group">
                              <label>Address</label>
-                             <textarea placeholder="Enter Address Here.." rows="3" class="form-control" id="saddress"></textarea>
+                             <textarea placeholder="Enter Address Here.." rows="3" class="form-control" name="s_address"></textarea>
                          </div>	
                          <div class="row">
                              <div class="col-sm-4 form-group">
                                  <label>Dob</label>
-                                 <input type="text" placeholder="Enter Dob.." class="form-control">
+                                 <input type="text" placeholder="Enter Dob.." class="form-control" name="s_dob">
                              </div>	
                              <div class="col-sm-4 form-group">
                                  <label>Gender</label>
-                                 <input type="text" placeholder="Enter Gender." class="form-control">
+                                 <input type="text" placeholder="Enter Gender." class="form-control" name="s_gender">
                              </div>	
                              <div class="col-sm-4 form-group">
                                  <label>photo</label>
-                                 <input type="file" placeholder="" class="form-control" id="myFile" name="filename">
+                                 <input type="file" placeholder="" class="form-control" id="myFile" name="s_pic">                       
                                  
-                                 <input type="submit">
-                             </div>	
-                                 
-                         </div>
-                         <div class="row">							
-                             
-                         </div>	
+                             </div>	                                 
+                         </div>                       
                          <div class="form-group">
                              <label>parrent name</label>
-                             <input type="text" placeholder="Enter qualification.." class="form-control">
+                             <input type="text" placeholder="parrent name" class="form-control" name="sp_name">
                          </div>						
                      <div class="form-group">
                          <label>Phone Number</label>
-                         <input type="text" placeholder="Enter Phone Number Here.." class="form-control">
+                         <input type="text" placeholder="Enter Phone Number Here.." class="form-control" name="s_phone">
                      </div>		
                      <div class="form-group">
                          <label>Email Address</label>
-                         <input type="text" placeholder="Enter Email Address Here.." class="form-control">
+                         <input type="text" placeholder="Enter Email Address Here.." class="form-control" name="s_email">
                      </div>	
                      <div class="form-group">
                          <label>password</label>
-                         <input type="text" placeholder="Enterpassword." class="form-control">
+                         <input type="text" placeholder="Enterpassword." class="form-control" name="s_pwd">
                      </div>
-                     <button type="button" class="btn btn-lg btn-info">Submit</button>					
+                     <button type="submit" class="btn btn-lg btn-info">Submit</button>					
                      </div>
                  </form> 
                  </div>
