--- a/school/teacher/templates/teacher/tview_student.html
+++ b/school/teacher/templates/teacher/tview_student.html
@@ -3,29 +3,39 @@
 {%block content%}
 <h1>view student</h1>
 
+{% if student_list %}
 <table class="table align-middle mb-0 bg-white">
-    <thead class="bg-light">
-      <tr>
-        
-        <th>Name</th>
-        <th>sid</th>
-        <th>Email</th>
-        <th>phone</th>
-        <th>gender</th>
-        <th>dob</th>
-        <th>parent name</th>
-        <th>class teacher</th>
-        <th>photo</th>
-        <th>Actions</th>
-
-      </tr>
-    </thead>
+  <thead class="bg-light">
     <tr>
-        
+      <th>sid</th>
+      <th>Name</th>
+      <th>Email</th>
+      <th>phone</th>
+      <th>gender</th>
+      <th>dob</th>
+      <th>parent name</th>
+      <th>address</th>
+      <th>photo</th>
     </tr>
-    <tbody>
-   
-      
-    </tbody>
-  </table>
+  </thead>
+  <tbody>
+  {% for student in student_list %}
+  <tr>
+    <td>{{forloop.counter}}</td>
+    <td>{{student.student_name | upper }}</td>
+    <td>{{student.student_email }}</td>
+    <td>{{student.student_phone }}</td>
+    <td>{{student.student_gender }}</td>
+    <td>{{student.student_dob }}</td>
+    <td>{{student.student_parrent_name }}</td>
+    <td>{{student.student_address }}</td>
+    <td><img src="{{ student.student_photo.url }}" alt="hhh" height="100px" width="100px"></td>
+  </tr>
+  {% endfor %}
+  </tbody>
+</table>
+{% else %}
+<h2> No data to show </h2>
+
+{%endif%}
 {%endblock%}
