--- a/school/school_admin/templates/school_admin/view_teacher.html
+++ b/school/school_admin/templates/school_admin/view_teacher.html
@@ -2,29 +2,40 @@
 {%block title%}view teacher{%endblock%}
 {%block content%}
 <h1>view teacher</h1>
-<table class="table align-middle mb-0 bg-white">
+<table class="table align-middle mb-0 bg-white" >
     <thead class="bg-light">
       <tr>
-        
-        <th>Name</th>
         <th>tid</th>
+        <th>Name</th>
+        
         <th>Email</th>
         <th>phone</th>
         <th>gender</th>
         <th>dob</th>
+        <th>address</th>
         <th>qualification</th>
         <th>experience</th>
         <th>photo</th>
-        <th>Actions</th>
+        <!-- <th>Actions</th> -->
 
       </tr>
     </thead>
-    <tr>
-        
-    </tr>
+    
     <tbody>
-   
-      
+      {% for teacher in teacher_list %}
+      <tr>
+        <td>{{forloop.counter}}</td>
+        <td>{{teacher.teacher_name | upper }}</td>
+        <td>{{teacher.teacher_email }}</td>
+        <td>{{teacher.teacher_phone }}</td>
+        <td>{{teacher.gender }}</td>
+        <td>{{teacher.teacher_dob }}</td>
+        <td>{{teacher.teacher_address }}</td>
+        <td>{{teacher.qualifiaction }}</td>
+        <td>{{teacher.exp }} year{{ teacher.exp | pluralize}}</td>
+        <td><img src="{{ teacher.teacher_photo.url }}" alt="hhh" height="100px" width="100px"></td>
+      </tr>
+      {% endfor %}
     </tbody>
   </table>
 {%endblock%}
