--- a/school/student/templates/student/base_student.html
+++ b/school/student/templates/student/base_student.html
@@ -45,6 +45,12 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'student:sview_profile'%}">profile</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'student:s_home'%}">home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'student:s_change_pwd'%}">change password</a>
+            </li>
           </ul>
         </div>
       </div>
