--- a/school/teacher/templates/teacher/t_home.html
+++ b/school/teacher/templates/teacher/t_home.html
@@ -29,6 +29,9 @@
  <div class="icon">
   <a class="btn btn-outline-light btn-lg" href="{% url 'teacher:tc_pwd'%}" role="button" >CHANGE PASSWORD</a>
  </div>
+ <div class="icon">
+  <a class="btn btn-outline-light btn-lg" href="{% url 'teacher:t_logout' %}" role="button" >log out</a>
+ </div>
   
 </div>
 
