--- a/school/school_admin/templates/school_admin/admin_profile.html
+++ b/school/school_admin/templates/school_admin/admin_profile.html
@@ -18,7 +18,7 @@
                                 <span class="text-primary">Coach</span>
                             </div>
                             <ul class="list-unstyled mb-1-9">
-                                <li class="mb-2 mb-xl-3 display-28"><span class="display-26 text-secondary me-2 font-weight-600">Position:</span> Coach</li>
+                                <li class="mb-2 mb-xl-3 display-28"><span class="display-26 from django.conf.urls.static import static me-2 font-weight-600">Position:</span> Coach</li>
                                 <li class="mb-2 mb-xl-3 display-28"><span class="display-26 text-secondary me-2 font-weight-600">Experience:</span> 10 Years</li>
                                 <li class="mb-2 mb-xl-3 display-28"><span class="display-26 text-secondary me-2 font-weight-600">Email:</span> edith@mail.com</li>
                                 <li class="mb-2 mb-xl-3 display-28"><span class="display-26 text-secondary me-2 font-weight-600">Address:</span> www.example.com</li>
