--- a/school/teacher/templates/teacher/add_student.html
+++ b/school/teacher/templates/teacher/add_student.html
@@ -32,6 +32,7 @@
      <h1 class="well"><b> ADD studentS</b> </h1>
      <div class="col-lg-12 well">
      <div class="row">
+        {{status}}
                  <form method="POST"  enctype="multipart/form-data">
                     {% csrf_token %}
                      <div class="col-sm-12">
@@ -71,8 +72,9 @@
                      </div>		
                      <div class="form-group">
                          <label>Email Address</label>
-                         <input type="text" placeholder="Enter Email Address Here.." class="form-control" name="s_email">
-                     </div>	
+                         <input type="text" placeholder="Enter Email Address Here.." class="form-control" name="s_email" id="st_email">
+                        <span id="message" ></span>
+                        </div>	
                      <div class="form-group">
                          <label>password</label>
                          <input type="text" placeholder="Enterpassword." class="form-control" name="s_pwd">
@@ -83,6 +85,39 @@
                  </div>
      </div>
      </div>
+     <script>
+        $(document).ready(function(){
+            $.ajaxSetup({
+                headers: {
+                  "X-CSRFToken": $('[name=csrfmiddlewaretoken]').val()
+                }
+            })
+            $('#st_email').change(function(){
+                var email = $('#st_email').val()
+                $.ajax({
+                    type:'POST',
+                    url:"{% url 'teacher:e_exists' %}",
+                    data:{
+                        'email':email
+                    },
+                    success:function(response){
+                        if (response.status == true)
+                        {
+                            $('#message').html('email exists')
+                            $('#message').css("color","red")
+                        }
+                        else
+                        {
+                            $('#message').html('email available')
+                            $('#message').css("color","black")
+                        }
+                        console.log(response.status)
+                    }
+
+                })
+            })
+        })
+     </script>
        
 
 {%endblock%}
