--- a/school/teacher/templates/teacher/tchange_password.html
+++ b/school/teacher/templates/teacher/tchange_password.html
@@ -5,17 +5,22 @@
 <h1>change</h1>
 <br><br>
 <div style="width:500px ;">
-    <form id="password-reset-form">
+    <form id="password-reset-form" method="POST">
+      {% csrf_token %}
         <div id="alert"></div>
+        <label for="old password">old Password</label>
+        <input type=" password" name="old_pwd" /><br>
       
-        <label for="password">Password</label>
-        <input type="password" id="password" />
+        <label for="new password">new Password</label>
+        <input type=" password" name="new_pwd" /><br>
       
-        <label for="password-verify">Re-type password</label>
-        <input type="password" id="password-verify" />
+        <label for="confirm password">password</label>
+        <input type=" password" name="con_pwd" /><br>
       
-        <button type="submit">Reset password</button>
+        <button type="submit">Reset password</button>       
       </form>
+      
+      {{status}}
 </div>
 <br><br>
 {%endblock%}
